# metlife_work

./: MetLife_JP_Flows (1).html  backend_and_ai_development_plan.md  metlife_lead_nurturing_ui.html
metlife_agents_backend/: .env.sample  .gitignore  BACKEND_FILEWISE_EXPLANATION.md  README.md  alembic.ini  fastapi_application.py  metlife_agents.db  metlife_agents.db-shm  metlife_agents.db-wal  metlife_checkpoints.db  package-lock.json  pyproject.toml
metlife_agents_backend/alembic/: env.py
metlife_agents_backend/alembic/versions/: 10d02edfa1d3_initial_migration_autogenerated.py  32b600a711ba_added_role_id_in_user_table.py  4f6d36a665f9_initial_schema_all_tables.py  513b87b07032_remove_language_preference.py  a1b2c3d4e5f6_add_custom_permissions_to_users.py  a1b2c3d4e5f6_rename_external_message_id.py  a7e3f2b1c9d0_hitl_queue_batch_id.py  b2c3d4e5f6a7_drop_unused_tables.py  c3d4e5f6a7b8_add_sse_events_table.py  c3e9a1f8b2d5_comm_subject_en_template_name.py  d4e5f6a7b8c9_add_batch_runs_table.py  d9b4f7a2c6e1_internal_outbox_timers_handoffs.py  e5f6a7b8c9d0_add_last_active_at_to_leads.py  g9h0i1j2k3l4_add_model_timestamps.py  (+2 more)
metlife_agents_backend/core/: __init__.py  fastapi_blueprint.py
metlife_agents_backend/docs/: AGENT_SCENARIOS.md  BACKEND_AGENTIC_FLOW_REVIEW.md  BACKEND_VS_METLIFE_JP_FLOW_GAP_ANALYSIS.md  GAP_CONFLICT_MISSING_ANALYSIS.md
metlife_agents_backend/prompts/: __init__.py  briefing.py  intent.py  writer.py
metlife_agents_backend/scripts/: analyse_dormant.py  inspect_db.py  seed_database.py  seed_email_templates.py  seed_two_leads.py  seed_users.py
(+161 files in other folders)
